--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
-    <ion-title (click)="choose()">
-      {{fixtit(subject.name)}}<div class="bookbt"></div>
+    <ion-title (click)="choose()" style="padding: 0px 20px 1px;">
+      {{fixtit(subject.name)}}&nbsp;<span style="font-size: small">[切换科目]</span><div class="bookbt"></div>
     </ion-title>
   </ion-navbar>
 </ion-header>
